# wahlfang

./: .bandit  .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  LICENSE  MANIFEST.in  Makefile  README.md  enc.py  mgdb_export.py  mypy.ini  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
docs/: deploying.md  settings.py
management/: admin.py  authentication.py  consumers.py  forms.py  models.py  routing.py  urls.py  utils.py  views.py
management/management/commands/: create_admin.py  process_reminders.py
management/migrations/: 0001_initial.py  0002_auto_20201007_1636.py  0003_alter_electionmanager_id.py
management/templates/management/: add_application.html  add_election.html  add_mobile_voter_name.html  add_mobile_voter_qr.html  add_session.html  add_tokens.html  add_voters.html  application.html  base.html  election.html  election_add_voters.html  election_result.html  help.html  image_input.html  import_csv.html  index.html  login.html  results.html  session.html  session_election_item.html  session_settings.html  spectator_settings.html  voters_list.html
react_frontend/: package.json
react_frontend/src/: App.js  api.js
react_frontend/src/components/: Election.js  Layout.js
react_frontend/src/pages/: Application.js  Help.js  Home.js  Login.js  Logout.js  PerformVote.js
rest_api/: channelsmiddleware.py  serializers.py  urls.py  views.py
src/: manage.py
src/vote/: authentication.py  forms.py  models.py  tests.py  urls.py  views.py
src/vote/migrations/: 0001_initial.py  0003_auto_20200423_0004.py
src/wahlfang/: settings.py  urls.py
static/js/: reload.js
vote/: admin.py  apps.py  authentication.py  consumers.py  email.py  forms.py  models.py  routing.py  selectors.py  tests.py  urls.py  views.py
vote/management/commands/: create_election.py  create_session.py  create_voter.py  createelection.py  createvoter.py  import_voters.py  remind_voters.py  reset_voter.py  revoke_code.py  send_correction.py
vote/migrations/: 0001_initial.py  0002_auto_20200422_2347.py  0002_auto_20200529_2104.py  0002_election_description.py  0003_auto_20200430_1807.py  0003_auto_20200529_2118.py  0004_auto_20200423_0025.py  0004_auto_20200430_1830.py  0004_auto_20200529_2250.py  0005_auto_20200423_0041.py  0005_auto_20200530_0019.py  0005_voter_remind_me.py  0006_auto_20200424_1424.py  0006_auto_20200430_1938.py  0006_auto_20200530_1836.py  0007_auto_20200516_1814.py  0007_auto_20200530_2113.py  0007_election_max_votes_yes.py  0008_auto_20200524_1609.py  0008_election_result_published.py  0009_auto_20200525_1121.py  0009_remove_voter_remind_me.py  0010_auto_20200601_0020.py  0011_voter_logged_in.py  0012_auto_20200601_0047.py  0013_auto_20201007_1830.py  0014_election_voters_self_apply.py  0015_auto_20201011_1826.py  0016_voter_name.py  0017_election_send_emails_on_start.py  0018_auto_20201025_2159.py  0019_auto_20201030_1913.py  0020_election_remind_text_sent.py  0021_auto_20201103_1923.py  0022_auto_20201104_1438.py  0023_election_disable_abstention.py  0024_auto_20201116_2128.py  0025_session_spectator_token.py  0026_voter_invalid_email.py  0027_auto_20210608_1206.py  (+6 more)
vote/static/js/: reload.js
vote/templates/vote/: application.html  base.html  help.html  help.md  image_input.html  index.html  index_election_item.html  login.html  ratelimited.html  spectator.html  spectator_election_item.html  vote.html  (+2 more)
vote/templatetags/: vote_extras.py
wahlfang/: __init__.py  asgi.py  manage.py  routing.py  settings.py  urls.py  wsgi.py
wahlfang/settings/: base.py  development.py  wahlfang.py
wahlfang_api/: apps.py  authentication.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
wahlfang_web/: .gitignore  apps.py  package.json
wahlfang_web/public/: index.html  manifest.json
wahlfang_web/src/: App.js  index.js  websocket.js
(+52 files in other folders)
