[metadata]
name = wahlfang
author = StuStaNet e. V.
version = attr: wahlfang.__version__
author_email = admins@stustanet.de
description = Wahlfang - a simple, feature complete online voting platform.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://gitlab.stusta.de/stustanet/wahlfang
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application
    Development Status :: 4 - Beta
    Framework :: Django

[options]
python_requires = >=3.6
setup_requires =
  setuptools
install_requires =
  Django~=3.2
  django-crispy-forms~=1.11
  django-csp~=3.7
  django-ratelimit~=3.0
  pillow~=8.2
  argon2-cffi~=20.1
  django-auth-ldap~=2.4
  qrcode~=6.1
  latex~=0.7
  django_prometheus~=2.1
  channels~=3.0
  channels-redis~=3.2
  djangorestframework~=3.12
  djangorestframework-simplejwt~=4.7
packages = find:

[options.entry_points]
console_scripts =
    wahlfang = wahlfang.manage:main
